--- a/kindle-highlights.cabal
+++ b/kindle-highlights.cabal
@@ -19,5 +19,8 @@ executable kindle-highlights
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5,
                        parsec,
+                       optparse-applicative,
                        text,
+                       containers,
                        time
+  other-modules:       CommandOptions
